[gd_scene load_steps=9 format=3 uid="uid://cxo0jiob510da"]

[ext_resource type="Script" path="res://scripts/axe.gd" id="1_7trxd"]
[ext_resource type="Texture2D" uid="uid://cevqanp6332yd" path="res://media/graphics/axe_icon.png" id="2_ewrxs"]
[ext_resource type="Script" path="res://scripts/gravity_component.gd" id="3_pfiug"]
[ext_resource type="PackedScene" uid="uid://div8rux31gto0" path="res://scenes/despawner.tscn" id="4_6eprd"]

[sub_resource type="Animation" id="Animation_mfffs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_v")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_rc6ag"]
resource_name = "default"
length = 0.266668
loop_mode = 1
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_v")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sb0cj"]
_data = {
"RESET": SubResource("Animation_mfffs"),
"default": SubResource("Animation_rc6ag")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3rskj"]
size = Vector2(16, 16)

[node name="Axe" type="Area2D"]
collision_layer = 32
collision_mask = 4
script = ExtResource("1_7trxd")
damage = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ewrxs")

[node name="SFXTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.268
autostart = true

[node name="GravityComponent" type="Node" parent="."]
script = ExtResource("3_pfiug")

[node name="Despawner" parent="." instance=ExtResource("4_6eprd")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sb0cj")
}
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3rskj")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="SFXTimer" to="." method="_on_sfx_timer_timeout"]
